@@ -1,5 +1,9 @@
 [b]Version 0.6.9[/b]:
 
+(2010-02-01)
+ * Added an option (Options -> Statusbar) to display the video resolution and
+   fps in the statusbar.
+
 (2010-01-28)
  * (Experimental) Now the slider seeks again by percentage instead of time, but
    this time the percentage uses fractions so it should be as accurate as
